# camera_calibrator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
include/camera/: AravisBackend.hpp  BackendFactory.hpp  CameraDevice.hpp  Feature.hpp  GenTLBackend.hpp  ICameraBackend.hpp  OpenCVBackend.hpp
include/core/: Frame.hpp  FrameRingBuffer.hpp
include/processing/: Calibration.hpp  PatternConfig.hpp  PatternDetector.hpp
include/ui/: ImGuiApp.hpp  ImageTexture.hpp
scripts/: build_opencv_contrib_world.sh  install_aravis_ubuntu.sh
src/: main.cpp
src/camera/: AravisBackend.cpp  BackendFactory.cpp  CameraDevice.cpp  GenTLBackend.cpp  OpenCVBackend.cpp
src/processing/: Calibration.cpp  PatternDetector.cpp
src/ui/: ImGuiApp.cpp  ImageTexture.cpp
